Primer carrousel implementado con base de datos, hemos modificado el js del carrousel, añadido el BLL, DAO y mdel. El main.js con los menus y la conexión a base de datos.

--- a/view/inc/header.html
+++ b/view/inc/header.html
@@ -33,9 +33,9 @@
                     <!-- Nav Starts -->
                      <div class="navbar-collapse collapse">
                        <ul class="nav navbar-nav navbar-right">
-                            <li class="active"><a href="index.php?page=homepage">Home</a></li>
+                            <li class="active"><a href="index.php?module=home&op=view">Home</a></li>
                             <li class="avatar"></li>
-                            <li><a href="index.php?page=shop">SHOP</a></li>
+                            <li><a href="index.php?module=shop&op=view">SHOP</a></li>
                             <li><a id='loginBtn1'class='login' href="module/login_register/ctrl/ctrl_login.php?op=login-register_view">Iniciar Sesión</a></li>
                             <!--<li><a href="index.php?page=agents">Agents</a></li>
                             <li><a href="index.php?page=blog">Blog</a></li>
