--- a/view/inc/top_page_home.html
+++ b/view/inc/top_page_home.html
@@ -17,13 +17,15 @@
     <!-- LOG OUT -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
 
-    <script src="/proyectos/8_MVC_CRUD/view/js/promises.js"></script>
-    <script src="/proyectos/8_MVC_CRUD/view/js/main.js"></script>
-    <script src="/proyectos/8_MVC_CRUD/view/js/activity_user.js"></script>
+    <!-- <script src="/proyectos/8_MVC_CRUD/view/js/promises.js"></script>
+    <script src="/proyectos/8_MVC_CRUD/view/js/activity_user.js"></script> -->
+    <script src="/proyectos/FRAMEWORK_CITYHOUSE/view/js/main.js"></script>
+    <script src="/proyectos/FRAMEWORK_CITYHOUSE/module/home/view/js/ctrl_home.js"></script>
+    <script src="/proyectos/FRAMEWORK_CITYHOUSE/view/js/promises.js"></script>
 
     <!--js-->
-    <script src="module/home/model/ctrl_home.js"></script>
-    <script src="module/search/model/crtl_search.js"></script>
+    <script src="module/home/ctrl/ctrl_home.class.php"></script>
+    <!-- <script src="module/search/model/crtl_search.js"></script> -->
     
 </body>
 </html>
