Funcionan los carruseles del home, solo queda cambiar las conexiones por una unica conecsión.

--- a/view/inc/header.html
+++ b/view/inc/header.html
@@ -86,7 +86,7 @@
                 </div> -->
                 <div class="search__container">
                     <div class="header">
-                        <a href="index.php"><img src="view/images/header/logo.png" alt="CityHouse"></a>
+                        <a href="index.php?module=home&op=view"><img src="view/images/header/logo.png" alt="CityHouse"></a>
                     </div>
                     <input class="search__input" type="text" placeholder="Search">
                     <div id="search_auto" class="autocomplete"></div>
