--- a/view/inc/top_page_home.html
+++ b/view/inc/top_page_home.html
@@ -24,7 +24,7 @@
     <script src="/proyectos/FRAMEWORK_CITYHOUSE/view/js/promises.js"></script>
 
     <!--js-->
-    <script src="module/home/ctrl/ctrl_home.class.php"></script>
+    <!-- <script src="module/home/ctrl/ctrl_home.class.php"></script> -->
     <!-- <script src="module/search/model/crtl_search.js"></script> -->
     
 </body>
