Añadimos un modulo del shop

--- a/module/shop/view/shop.html
+++ b/module/shop/view/shop.html
@@ -11,6 +11,7 @@
     </head>
     <!-- filtros-shop -->
     <div id="filters_shop_mostrar"> </div><br><br><br>
+    <!-- <p>AJIHSBDIAISHDIH</p> -->
     <!-- list-shop -->
     <div class="container_shop" id="content_shop_vivienda"> </div>
     <!-- details-shop -->
