--- a/view/inc/top_page_shop.html
+++ b/view/inc/top_page_shop.html
@@ -21,8 +21,8 @@
 
 
     <!--js-->
-    <!-- <script src="module/shop/model/ctrl_shop.js"></script>
-    <script src="module/search/model/crtl_search.js"></script> -->
+    <script src="module/shop/view/js/ctrl_shop.js"></script>
+    <!-- <script src="module/search/model/crtl_search.js"></script> -->
 
        
 </body>
