--- a/module/shop/view/shop.html
+++ b/module/shop/view/shop.html
@@ -1,14 +1,14 @@
 <html>
 <body>
-    <br><br><br><br><br>
-    <head>
-      <link rel="stylesheet" href="module\shop\view\css\shop_css.css">
-      <link rel="stylesheet" href="module\home\view\css\carrusels_css.css">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
-    </head>
+  <br><br><br><br><br>
+  <head>
+    <link rel="stylesheet" href="module\shop\view\css\css_shop.css">
+    <link rel="stylesheet" href="module\home\view\css\carrusels_css.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+  </head>
     <!-- filtros-shop -->
     <div id="filters_shop_mostrar"> </div><br><br><br>
     <!-- <p>AJIHSBDIAISHDIH</p> -->
@@ -51,7 +51,480 @@
 
   </div>
 </body>
+<style>
+  @import url(http://weloveiconfonts.com/api/?family=entypo);
 
+@import url(https://fonts.googleapis.com/css?family=Roboto:300);
+
+#pagination {
+  display: flex;
+    justify-content: center;
+    margin-top: -20px;
+    margin-right: 500px;
+  /* border: 1px solid black;
+  border-radius: 10px; */
+}
+
+.pagination-link--wide.first:hover,
+.pagination-link--wide.last:hover {
+    background-color: #fa4248;
+    background-size: 0%;
+    border-radius: 5px;
+}
+
+.pagination-container {
+	margin-top: 1em;
+	padding-top: 2em;
+	border-top: 1px solid #d7dadb;
+	text-align: center;
+}
+
+.pagination-item {
+	list-style-type: none;
+	display: inline-block;
+	border-right: 1px solid #d7dadb;
+
+	transform: scale(1) rotate(19deg) translateX(0px) translateY(0px) skewX(-10deg) skewY(-20deg);
+}
+
+	.pagination-item:hover,
+	.pagination-item.is-active {
+		background-color: #fa4248;
+		border-right: 1px solid #fff;
+
+		.pagination-link {
+			color: #fff;
+		}
+
+	}
+
+.pagination-item.first-number {
+  border-left: 1px solid #d7dadb;
+}
+
+.pagination-link {
+	padding: 1.1em 1.6em;
+	display: inline-block;
+	text-decoration: none;
+	color: #000000;
+
+	transform: scale(1) rotate(0deg) translateX(0px) translateY(0px) skewX(20deg) skewY(0deg);
+}
+
+.pagination-item--wide {
+	list-style-type: none;
+	display: inline-block;
+  height: 50px;
+  width: 70px;
+}
+
+.pagination-item--wide.first {
+	margin: 0 1em 0 0;
+}
+
+.pagination-item--wide.last {
+	margin: 0 0 0 2em;
+}
+
+.pagination-link--wide {
+	text-decoration: none;
+	color: #000000;
+	padding: 1.1em 1.6em;
+}
+
+.pagination-link--wide:hover {
+	color: #fa4248;
+}
+
+.pagination-link--wide.first:before,
+.pagination-link--wide.last:after {
+  font-family: 'entypo';
+  /* speak: none; */
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.pagination-link--wide.last:hover,
+.pagination-link--wide.first:hover {
+    color: #fff;
+}
+
+
+/* HAStA AQUII */
+
+.paginacion{
+  text-align: center;
+  width: 100%;
+}
+.filtro {
+        display: inline-block;
+        margin: 10px;
+        width: auto; 
+    }
+
+    .filtro select {
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        padding: 10px 5px;
+        width: 100%; 
+        box-sizing: border-box; 
+    }
+    .filter_button,
+    .remove_filters {
+        background-color: #4CAF50; 
+        border: none; 
+        color: white; 
+        padding: 10px 10px; 
+        text-align: center; 
+        text-decoration: none; 
+        display: inline-block; 
+        font-size: 15px;
+        margin: 4px 2px;
+        cursor: pointer; 
+        border-radius: 4px; 
+        transition: background-color 0.5s;
+    }
+    .filter_button_extras{
+    background-color: #4CAF50; 
+        border: none; 
+        color: white; 
+        padding: 10px 10px;
+        text-align: center; 
+        text-decoration: none; 
+        display: inline-block; 
+        font-size: 15px;
+        margin: 4px 2px;
+        cursor: pointer; 
+        border-radius: 4px; 
+        transition: background-color 0.5s;
+    }
+    .filter_button_extras:hover,
+    .filter_button:hover,
+    .remove_filters:hover {
+        background-color: #9067e2; 
+    }
+    /* MODAL */
+    
+/* Estilos para el modal */
+.modal {
+  display: none; 
+  position: fixed;
+  z-index: 1; 
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.5); 
+}
+
+/* Estilos para el contenido del modal */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; 
+  padding: 20px;
+  border: 1px solid #888;
+  text-align: left;
+  width: 80%; 
+  max-width: 500px; 
+}
+.price_modal{
+    font-size: 15px;
+}
+
+/* Estilos para el botón de cierre del modal */
+.close {
+  color: #aaa;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 28px;
+  font-weight: bold;
+  cursor: pointer;
+}
+.slider-content{
+  width: 5000px;
+}
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+.slider {
+  width: 100%; 
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+  height: 4px;
+}
+.title_modalprice{
+ font-size: 30px;
+}
+.modal-content_2 h2{
+font-size: 40px;
+}
+
+.filtros {
+    position: absolute;
+    top: 65px;
+    left: 0;
+    width: 100%;
+    text-align: center; 
+    background-color: rgba(255, 255, 255, 1);
+    z-index: 1; 
+}
+.botones{
+  position: absolute;
+    top: 58px;
+    left: 0;
+    width: 100%;
+    margin-left: 1000px;
+    background-color: rgba(255, 255, 255, 0.1);
+    z-index: 2; 
+}
+.label_2{
+  font-size: 16px;
+  text-align: left;
+  padding-left: 40px
+}
+
+@import url("https://fonts.googleapis.com/css?family=Lato:400,700");
+* {
+  box-sizing: border-box;
+}
+
+@-webkit-keyframes topAnimation {
+  from {
+    transform: translate(0rem, 0);
+  }
+  to {
+    transform: translate(0rem, 3.5rem);
+  }
+}
+
+@keyframes topAnimation {
+  from {
+    transform: translate(0rem, 0);
+  }
+  to {
+    transform: translate(0rem, 3.5rem);
+  }
+}
+@-webkit-keyframes bottomAnimation {
+  from {
+    transform: translate(-11.5rem, 0);
+  }
+  to {
+    transform: translate(0rem, 0);
+  }
+}
+@keyframes bottomAnimation {
+  from {
+    transform: translate(-11.5rem, 0);
+  }
+  to {
+    transform: translate(0rem, 0);
+  }
+}
+button.btn_filters {
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: 700;
+  border: 0;
+  position: relative;
+  letter-spacing: 0.15em;
+  margin: 0 auto;
+  padding: 1rem 2.5rem;
+  background: transparent;
+  outline: none;
+  font-size: 20px;
+  color: #111111;
+  transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.15s;
+}
+button.btn_filters::after, button.btn_filters::before {
+  border: 0;
+  content: "";
+  position: absolute;
+  height: 40%;
+  width: 10%;
+  transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  z-index: -2;
+  border-radius: 50%;
+}
+button.btn_filters::before {
+  border: 0;
+  height: 1px;
+  width: 1px;
+  background-color: #000000;
+  top: -0.75rem;
+  left: 0.5rem;
+  /*-webkit-animation: topAnimation 2s cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.25s infinite alternate;
+          animation: topAnimation 2s cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.25s infinite alternate;*/
+}
+button.btn_filters::after {
+  background-color: #a4f1af;
+  height: 1px;
+  width: 1px;
+  top: 3rem;
+  left: 13rem;
+  /*-webkit-animation: bottomAnimation 2s cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.5s infinite alternate;
+          animation: bottomAnimation 2s cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.5s infinite alternate;*/
+}
+button.btn_filters:hover {
+  color: white;
+}
+button.btn_filters:hover::before, button.btn_filters:hover::after {
+  top: 0;
+  height: 100%;
+  width: 100%;
+  border-radius: 0;
+  -webkit-animation: none;
+          animation: none;
+}
+button.btn_filters:hover::after {
+  left: 0rem;
+}
+button.btn_filters:hover::before {
+  top: 0.5rem;
+  left: 0.35rem;
+}
+
+/*MODAL EXTRAS _2*/
+
+.modal_2 {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+  .modal-content_2 {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 450px;
+    border-radius: 8px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+    flex-direction: column; 
+    align-items: center; 
+    position: relative; 
+  }
+  .modal-content_2 label {
+    display: block;
+    margin-bottom: 10px;
+  }
+  .modal-content_2 label input[type="checkbox"] {
+    margin-right: 5px;
+  }
+  .modal-content_2 button {
+    background-color: #4caf50;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    grid-column: span 2;
+  }
+  .modal-content_2 button:hover {
+    background-color: #45a049;
+  }
+
+.close_2 {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  color: #aaa;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close_2:hover,
+.close_2:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-content_2 h2 {
+  text-align: center;
+  grid-column: span 2;
+}
+
+/* SCROLL */
+
+.scroll_viviendas {
+    background-color: #e7e7e7;
+    border-radius: 10px;
+}
+
+
+.scroll_viviendas:hover {
+    background-color: #919090; /* Cambia el color de fondo al pasar el ratón por encima */
+    cursor: pointer; /* Cambia el cursor al pasar el ratón por encima */
+}
+
+.more_car__button {
+  position: static; /* Mantén la posición relativa */
+  text-align: center;
+  margin-top: -150px; /* Ajusta el margen superior según sea necesario */
+  margin-left: auto; /* Centra horizontalmente */
+  margin-right: auto; /* Centra horizontalmente */
+  display: block; /* Asegura que ocupe todo el ancho disponible */
+}
+
+.load_more_button {
+  background-color: #007bff; /* Color de fondo */
+  color: white; /* Color del texto */
+  padding: 10px 20px; /* Ajusta el relleno según sea necesario */
+  border: none; /* Sin borde */
+  border-radius: 5px; /* Bordes redondeados */
+  cursor: pointer; /* Cambia el cursor al pasar sobre el botón */
+}
+
+.load_more_button:hover {
+  background-color: #0056b3; /* Color de fondo al pasar el cursor */
+}
+
+
+.properties1{
+  align-items: center;
+  text-align: center;
+}
+.bordeado{
+  border: solid 1px;
+
+}
+.like-button {
+    position: relative;
+    width: 30px;
+    height: 30px;
+    left: 450px;
+    bottom: -210px;
+    background-image: url('view/images/shop/likes/dislike.png');
+    background-size: cover;
+    cursor: pointer;
+    z-index: 9999;
+}
+
+</style>
 
 
 </html>
