He añadido el modulo de search con el autocomplete y el select que depende del otro en tiempo real cuando se selecciona correcteamente y con prettyes.

--- a/view/inc/top_page_home.html
+++ b/view/inc/top_page_home.html
@@ -17,15 +17,14 @@
     <!-- LOG OUT -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script> -->
 
-    <!-- <script src="/proyectos/8_MVC_CRUD/view/js/promises.js"></script>
-    <script src="/proyectos/8_MVC_CRUD/view/js/activity_user.js"></script> -->
+    <script src="/proyectos/8_MVC_CRUD/view/js/activity_user.js"></script>
     <script src="/proyectos/FRAMEWORK_CITYHOUSE/view/js/main.js"></script>
     <script src="/proyectos/FRAMEWORK_CITYHOUSE/module/home/view/js/ctrl_home.js"></script>
     <script src="/proyectos/FRAMEWORK_CITYHOUSE/view/js/promises.js"></script>
 
     <!--js-->
     <!-- <script src="module/home/ctrl/ctrl_home.class.php"></script> -->
-    <!-- <script src="module/search/model/crtl_search.js"></script> -->
+    <script src="/proyectos/FRAMEWORK_CITYHOUSE/module/search/view/js/ctrl_search.js"></script>
     
 </body>
 </html>
