--- a/view/inc/top_page_shop.html
+++ b/view/inc/top_page_shop.html
@@ -22,7 +22,7 @@
 
     <!--js-->
     <script src="module/shop/view/js/ctrl_shop.js"></script>
-    <!-- <script src="module/search/model/crtl_search.js"></script> -->
+    <script src="/proyectos/FRAMEWORK_CITYHOUSE/module/search/view/js/ctrl_search.js"></script>
 
        
 </body>
