Hemos añadido la funcion de cargar los detalles cuando haces click en el marker del mapbox y implementado la vista del modulo login a nuestro framework, también hemos instalado composer para posteriormente usar el resend en nuestra aplicación con el email

--- a/view/inc/header.html
+++ b/view/inc/header.html
@@ -36,7 +36,7 @@
                             <li class="active"><a href="/proyectos/FRAMEWORK_CITYHOUSE/home">Home</a></li>
                             <li class="avatar"></li>
                             <li><a href="/proyectos/FRAMEWORK_CITYHOUSE/shop">SHOP</a></li>
-                            <li><a id='loginBtn1'class='login' href="module/login_register/ctrl/ctrl_login.php?op=login-register_view">Iniciar Sesión</a></li>
+                            <li><a id='loginBtn1'class='login' href="/proyectos/FRAMEWORK_CITYHOUSE/?module=login&op=view">Iniciar Sesión</a></li>
                             <!--<li><a href="index.php?page=agents">Agents</a></li>
                             <li><a href="index.php?page=blog">Blog</a></li>
                             <li><a href="index.php?page=contact">Contact</a></li>-->
