--- a/module/shop/view/shop.html
+++ b/module/shop/view/shop.html
@@ -2,6 +2,7 @@
 <body>
   <br><br><br><br><br>
   <head>
+<!-- Bootstrap CSS -->    
     <link rel="stylesheet" href="module\shop\view\css\css_shop.css">
     <link rel="stylesheet" href="module\home\view\css\carrusels_css.css">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
@@ -27,7 +28,7 @@
         <div class="date_img" id="container-date-img"> </div>
         <div class="date_vivienda" id="container-date-img"> </div>
     </div>
-    
+    <br><br><br><br>
 <div id="pagination"></div>
 <div class="title_content"></div>
 
@@ -40,15 +41,27 @@
   top: 50%;
   right: 0;
   transform: translateY(-50%);
-  width: 700px; /* Ancho del mapa */
-  height: 600px; /* Alto del mapa */
+  width: 600px; /* Ancho del mapa */
+  height: 480px; /* Alto del mapa */
   border-radius: 10px; /* Borde redondeado */
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1); /* Sombra */
-  border: 2px solid #ccc; /* Borde sólido de 2px de ancho y color gris claro */
-
+  z-index: 2;
 }
+.carousel-item {
+        display: flex;
+        align-items: center;
+    }
 
+    .carousel-item img {
+        width: 100px;
+        height: 100px;
+        margin-right: 10px;
+    }
 
+    .carousel-item h3,
+    .carousel-item p {
+        margin: 0;
+    }
 
   @import url(http://weloveiconfonts.com/api/?family=entypo);
 
@@ -280,7 +293,7 @@ font-size: 40px;
     width: 100%;
     text-align: center; 
     background-color: rgba(255, 255, 255, 1);
-    z-index: 1; 
+    z-index: 10; 
 }
 .botones{
   position: absolute;
