Hemos añadido el nuevo modulo de login, donde solo hemos activado el register a base de datos pero de momento sin enviar el email al correo destiantario.

--- a/view/inc/header.html
+++ b/view/inc/header.html
@@ -13,8 +13,8 @@
     <link rel="stylesheet" type="text/css" href="view/assets/slitslider/css/style.css" />
     <link rel="stylesheet" type="text/css" href="view/assets/slitslider/css/custom.css" />
 
+    <!-- <script src="/proyectos/FRAMEWORK_CITYHOUSE/view/js/modal_login.js"></script> -->
 </head>
-
 <body>
     <!-- Header Starts -->
     <header>
@@ -25,7 +25,7 @@
                         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
                             data-target=".navbar-collapse">
                             <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>z
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
@@ -36,10 +36,8 @@
                             <li class="active"><a href="/proyectos/FRAMEWORK_CITYHOUSE/home">Home</a></li>
                             <li class="avatar"></li>
                             <li><a href="/proyectos/FRAMEWORK_CITYHOUSE/shop">SHOP</a></li>
-                            <li><a id='loginBtn1'class='login' href="/proyectos/FRAMEWORK_CITYHOUSE/?module=login&op=view">Iniciar Sesión</a></li>
-                            <!--<li><a href="index.php?page=agents">Agents</a></li>
-                            <li><a href="index.php?page=blog">Blog</a></li>
-                            <li><a href="index.php?page=contact">Contact</a></li>-->
+                            <li><a id='loginBtn1' class='login' href="/proyectos/FRAMEWORK_CITYHOUSE/login">Iniciar Sesión</a></li>
+                            <!-- <li><a id='loginBtn1' class='login' href="#" onclick="openModal()">Iniciar Sesión</a></li> -->
                             <li><a class='logout'id="logoutBtn" onclick="logout()">Cerar Sesión</a></li>
                             </ul>
                     </div> 
@@ -52,38 +50,7 @@
                             <div class='search_category'>    
                             </div>
                         </div>
-                        
-
                     </div>
-                    
-                    <!-- <div class='filtros_header'>
-                    <div class='filtro_header'>
-                        <select class='type_select' name='type_select'>
-                            <option value='' disabled selected hidden>Tipo de casa</option>
-                            <optgroup label='TIPOS'>
-                                <option value='Piso'>Piso</option>
-                               <option value='Casa'>Casa</option>
-                               <option value='Chalet'>Chalet</option>
-                               <option value='Apartamento'>Apartamento</option>
-                               <option value='Duplex'>Duplex</option>
-                               <option value='Local'>Local</option>
-                            </optgroup>
-                        </select>
-                    </div>
-                    <div class='filtro_header'>
-                        <select class='city_select' name='city_select'>
-                            <option value='' disabled selected hidden>Ciudad</option>
-                            <optgroup label='CIUDAD'>
-                                <option value='Valencia'>Valencia</option>
-                                <option value='Barcelona'>Barcelona</option>
-                                <option value='Sevilla'>Sevilla</option>
-                                <option value='Alicante'>Alicante</option>
-                                <option value='Teruel'>Teruel</option>
-                                <option value='Madrid'>Madrid</option>
-                            </optgroup>
-                        </select>
-                    </div>
-                </div> -->
                 <div class="search__container">
                     <div class="header">
                         <a href="index.php?module=home&op=view"><img src="view/images/header/logo.png" alt="CityHouse"></a>
@@ -105,17 +72,12 @@
         <div class="container">
             <!-- Header Starts -->
             <div class="header">
-                
-                <!-- <a href="index.php"><img src="view/images/header/logo.png" alt="CityHouse"></a> -->
-                <ul class="pull-right">
-                    <!-- <li><a href="index.php?page=shop">SHOP</a></li>
-                    <li><a href="index.php?page=buysalerent_v1">View</a></li>
-                    <li><a href="index.php?page=buysalerent_v1">View_2</a></li> -->
-                </ul>
+                <ul class="pull-right"></ul>
             </div>
             <!-- #Header Ends -->
         </div>
         
     </header>
+
 </body>
 </html>
