--- a/module/login/view/login.html
+++ b/module/login/view/login.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link href="/proyectos/8_MVC_CRUD/module/login_register/view/css/login.css" rel="stylesheet" type="text/css" />
+    <link href="/proyectos/FRAMEWORK_CITYHOUSE/module/login/view/css/login.css" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="/proyectos/8_MVC_CRUD/module/login_register/model/ctrl_login.js"></script>
-    <script src="/proyectos/8_MVC_CRUD/module/login_register/model/ctrl_register.js"></script>
+    <!-- <script src="/proyectos/8_MVC_CRUD/module/login_register/model/ctrl_login.js"></script>
+    <script src="/proyectos/8_MVC_CRUD/module/login_register/model/ctrl_register.js"></script> -->
+    <script src="/proyectos/FRAMEWORK_CITYHOUSE/module/login/view/js/ctrl_login.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 </head>
 <body>
@@ -17,12 +18,12 @@
                         <form id="login__form" method="POST">
                             <div class="sign-in-htm">
                                 <div class="group">
-                                    <label for="user" class="label">Username</label>
+                                    <label for="user" class="label1">Username</label>
                                     <input id="username_log" type="text" class="input" name="username_log" autocomplete="username">
                                     <span id="error_username_log" class="error"></span>
                                 </div>
                                 <div class="group">
-                                    <label for="pass" class="label">Password</label>
+                                    <label for="pass" class="label1">Password</label>
                                     <input id="passwd_log" type="password" class="input" name="passwd_log" autocomplete="current-password">
                                     <span id="error_passwd_log" class="error"></span>
                                 </div>
@@ -32,7 +33,7 @@
                                 <div class="hr"></div>
                                 <div class="foot-lnk">
                                     <label for="tab-2">You don't have an account? </label>
-                                    <button><a href="http://localhost/proyectos/8_MVC_CRUD/index.php?page=homepage" class="button">Back</a></button>
+                                    <button><a href="/proyectos/FRAMEWORK_CITYHOUSE/home" class="button">Back</a></button>
                                 </div>
                             </div>
                         </form>
@@ -40,32 +41,31 @@
                         <form id="register__form" method="post">
                             <div class="sign-up-htm">
                                 <div class="group">
-                                    <label for="user" class="label">Username</label>
+                                    <label for="user" class="label1">Username</label>
                                     <input id="username_reg" type="text" class="input" name="username_reg" autocomplete="new-username">
                                     <span id="error_username_reg" class="error"></span>
                                 </div>
                                 <div class="group">
-                                    <label for="pass" class="label">Password</label>
+                                    <label for="pass" class="label1">Password</label>
                                     <input id="passwd1_reg" type="password" class="input" name="passwd1_reg" autocomplete="new-password">
                                     <span id="error_passwd1_reg" class="error"></span>
                                 </div>
                                 <div class="group">
-                                    <label for="pass" class="label">Repeat Password</label>
+                                    <label for="pass" class="label1">Repeat Password</label>
                                     <input id="passwd2_reg" type="password" class="input" name="passwd2_reg" autocomplete="new-password">
                                     <span id="error_passwd2_reg" class="error"></span>
                                 </div>
                                 <div class="group">
-                                    <label for="pass" class="label">Email Address</label>
+                                    <label for="pass" class="label1">Email Address</label>
                                     <input id="email_reg" type="email" class="input" name="email_reg">
                                     <span id="error_email_reg" class="error"></span>
                                 </div>
                                 <div class="group">
                                     <input type="submit" id="register" class="button" value="Sign Up">
                                 </div>
-                                <div class="hr"></div>
                                 <div class="foot-lnk">
                                     <label for="tab-1">Already Member?</label>
-                                    <button><a href="http://localhost/proyectos/8_MVC_CRUD/index.php?page=homepage" class="button">Back</a></button>
+                                    <button><a href="/proyectos/FRAMEWORK_CITYHOUSE/home" class="button">Back</a></button>
                                 </div>
                             </div>
                         </form>
