--- a/view/inc/top_page_login.html
+++ b/view/inc/top_page_login.html
@@ -25,7 +25,9 @@
 
     <!--js-->
     <!-- <script src="module/home/ctrl/ctrl_home.class.php"></script> -->
-    <script src="<?php echo SITE_PATH ?>module/search/view/js/ctrl_search.js"></script> 
-    
+    <script src="<?php echo SITE_PATH ?>module/search/view/js/ctrl_search.js"></script>
+    <script src="<?php echo SITE_PATH ?>module/login/view/js/ctrl_login.js"></script>
+
+    <!-- C:\xampp\htdocs\proyectos\FRAMEWORK_CITYHOUSE\module\login\view\js\ctrl_login.js -->
 </body>
 </html>
