--- a/view/inc/top_page.html
+++ b/view/inc/top_page.html
@@ -20,12 +20,16 @@
     <script src="<?php echo SITE_PATH ?>view/js/activity_user.js"></script>
     <script src="<?php echo SITE_PATH ?>view/js/main.js"></script>
     <script src="<?php echo SITE_PATH ?>module/home/view/js/ctrl_home.js"></script>
+    <script src="<?php echo SITE_PATH ?>module/shop/view/js/ctrl_shop.js"></script>
     <script src="<?php echo SITE_PATH ?>view/js/promises.js"></script>
     <!-- <?php echo SITE_PATH ?> -->
 
     <!--js-->
     <!-- <script src="module/home/ctrl/ctrl_home.class.php"></script> -->
-    <script src="<?php echo SITE_PATH ?>module/search/view/js/ctrl_search.js"></script> 
+    <script src="<?php echo SITE_PATH ?>module/search/view/js/ctrl_search.js"></script>
+    <script src="<?php echo SITE_PATH ?>module/login/view/js/ctrl_login.js"></script>
+
+    <!-- C:\xampp\htdocs\proyectos\FRAMEWORK_CITYHOUSE\module\login\view\js\ctrl_login.js -->
     
 </body>
 </html>
