Hemos realizado el cambio correcto de las contraseñas en el recover password con la funcion hash y cambiado el router para que capte las URL's verify y recover

--- a/module/login/view/login.html
+++ b/module/login/view/login.html
@@ -23,6 +23,9 @@
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
         }
+        .label2{
+            font-size: 16px;
+        }
         
         .forget_html {
             display: none;
@@ -86,6 +89,7 @@
             <div class="login-form">
                 <form id="login__form" method="POST">
                     <div class="sign-in-htm">
+                        <div class="32">
                         <div class="group">
                             <label for="user" class="label1">Username</label>
                             <input id="username_log" type="text" class="input" name="username_log" autocomplete="username">
@@ -104,6 +108,7 @@
                             <label for="tab-2">You don't have an account? </label>
                         </div> -->
                         <!-- <div class="hr"></div> -->
+                        </div>
                         <div class="foot-lnk">
                             <label id="forget_pass">Forgot Password?</label>
                         </div>
@@ -112,7 +117,7 @@
                                 <h4>Recover Password</h4>
                                 <div class="forget">
                                     <div class="email_recover">
-                                        <label for="email_forg" class="label">Email Address: </label>
+                                        <label for="email_forg" class="label2">Email Address: </label>
                                         <br>
                                         <input id="email_forg" name="email_forg" type="text" class="input" placeholder="example@gmail.com">
                                         <font color="red">
