Hemos añadido la modularidad del login, creando los tokens refresh y access en caso de que las contraseñas hash coincidan del usuario, los tokens se almacenan en el local storage como un array de tokens nombrado user_tokens.

--- a/view/inc/header.html
+++ b/view/inc/header.html
@@ -4,14 +4,15 @@
     <title>Realestate Bootstrap Theme</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="view/assets/bootstrap/css/bootstrap.css" />
-    <link rel="stylesheet" href="view/assets/style.css" />
+    <link rel="stylesheet" href="/proyectos/FRAMEWORK_CITYHOUSE/view/assets/bootstrap/css/bootstrap.css" />
+    <link rel="stylesheet" href="/proyectos/FRAMEWORK_CITYHOUSE/view/assets/style.css" />
     <!-- Owl stylesheet -->
-    <link rel="stylesheet" href="view/assets/owl-carousel/owl.carousel.css" >
-    <link rel="stylesheet" href="view/assets/owl-carousel/owl.theme.css">
+    <link rel="stylesheet" href="/proyectos/FRAMEWORK_CITYHOUSE/view/assets/owl-carousel/owl.carousel.css" >
+    <link rel="stylesheet" href="/proyectos/FRAMEWORK_CITYHOUSE/view/assets/owl-carousel/owl.theme.css">
     <!-- slitslider -->
-    <link rel="stylesheet" type="text/css" href="view/assets/slitslider/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="view/assets/slitslider/css/custom.css" />
+    <link rel="stylesheet" type="text/css" href="/proyectos/FRAMEWORK_CITYHOUSE/view/assets/slitslider/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="/proyectos/FRAMEWORK_CITYHOUSE/view/assets/slitslider/css/custom.css" />
+    <link rel="stylesheet" type="text/css" href="/proyectos/FRAMEWORK_CITYHOUSE/view/css/style.css " />
 
     <!-- <script src="/proyectos/FRAMEWORK_CITYHOUSE/view/js/modal_login.js"></script> -->
 </head>
@@ -53,7 +54,7 @@
                     </div>
                 <div class="search__container">
                     <div class="header">
-                        <a href="index.php?module=home&op=view"><img src="view/images/header/logo.png" alt="CityHouse"></a>
+                        <a href="index.php?module=home&op=view"><img src="/proyectos/FRAMEWORK_CITYHOUSE/view/images/header/logo.png" alt="CityHouse"></a>
                     </div>
                     <input class="search__input" type="text" placeholder="Search">
                     <div id="search_auto" class="autocomplete"></div>
