--- a/view/css/style.css
+++ b/view/css/style.css
@@ -5,7 +5,7 @@
          font-style:italic;
 }
 body{
-    background-color:#000000;
+    background-color:#ffffff;
     background-attachment: initial;
     background-repeat:no-repeat;
 	margin: 0;
