--- a/view/inc/top_page_home.html
+++ b/view/inc/top_page_home.html
@@ -26,6 +26,6 @@
     <!--js-->
     <!-- <script src="module/home/ctrl/ctrl_home.class.php"></script> -->
     <script src="<?php echo SITE_PATH ?>module/search/view/js/ctrl_search.js"></script> 
-    
+    <script src="<?php echo SITE_PATH ?>module/login/view/js/ctrl_login.js"></script>
 </body>
 </html>
