Hemos añadido al login el control de incio de sesion, donde tenemos la actividad del usuario, el refresh token y el token y sesion expires, de moment el sesion y control user funcionan, queda el refresh y expires token.

--- a/view/inc/header.html
+++ b/view/inc/header.html
@@ -31,7 +31,7 @@
                             <span class="icon-bar"></span>
                         </button>
                     </div>
-                    <!-- Nav Starts -->
+                    <!-- Nav Starts --> 
                      <div class="navbar-collapse collapse">
                        <ul class="nav navbar-nav navbar-right">
                             <li class="active"><a href="/proyectos/FRAMEWORK_CITYHOUSE/home">Home</a></li>
@@ -39,7 +39,7 @@
                             <li><a href="/proyectos/FRAMEWORK_CITYHOUSE/shop">SHOP</a></li>
                             <li><a id='loginBtn1' class='login' href="/proyectos/FRAMEWORK_CITYHOUSE/login">Iniciar Sesión</a></li>
                             <!-- <li><a id='loginBtn1' class='login' href="#" onclick="openModal()">Iniciar Sesión</a></li> -->
-                            <li><a class='logout'id="logoutBtn" onclick="logout()">Cerar Sesión</a></li>
+                            <li><a class='logout'id="logoutBtn" onclick="logout()">Cerrar Sesión</a></li>
                             </ul>
                     </div> 
                     
