--- a/view/inc/top_page_home.html
+++ b/view/inc/top_page_home.html
@@ -27,5 +27,8 @@
     <!-- <script src="module/home/ctrl/ctrl_home.class.php"></script> -->
     <script src="<?php echo SITE_PATH ?>module/search/view/js/ctrl_search.js"></script> 
     <script src="<?php echo SITE_PATH ?>module/login/view/js/ctrl_login.js"></script>
+
+    <script src="<?php echo SITE_PATH ?>view/js/activity_user.js"></script>
+
 </body>
 </html>
