--- a/view/inc/top_page_login.html
+++ b/view/inc/top_page_login.html
@@ -28,6 +28,8 @@
     <script src="<?php echo SITE_PATH ?>module/search/view/js/ctrl_search.js"></script>
     <script src="<?php echo SITE_PATH ?>module/login/view/js/ctrl_login.js"></script>
 
+    <script src="<?php echo SITE_PATH ?>view/js/activity_user.js"></script>
+
     <!-- C:\xampp\htdocs\proyectos\FRAMEWORK_CITYHOUSE\module\login\view\js\ctrl_login.js -->
 </body>
 </html>
