--- a/view/inc/top_page_shop.html
+++ b/view/inc/top_page_shop.html
@@ -24,6 +24,9 @@
     <script src="module/shop/view/js/ctrl_shop.js"></script>
     <script src="/proyectos/FRAMEWORK_CITYHOUSE/module/search/view/js/ctrl_search.js"></script>
 
+    <script src="<?php echo SITE_PATH ?>view/js/activity_user.js"></script>
+
+
 <!--        
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.6.1/mapbox-gl.css' rel='stylesheet' /> -->
